--- a/shah/app.css
+++ b/shah/app.css
@@ -264,6 +264,22 @@
   filter: alpha(opacity=75);
 }
 
+.badge.exposure-low,
+.badge.exposure-high,
+.badge.exposure-medium,
+.badge.exposure-very-high {
+  color: #fff;
+  background-color: #fec100;
+}
+
+.badge.exposure-high {
+  background-color: #9bc845;
+}
+
+.badge.exposure-very-high {
+  background-color: #00d693;
+}
+
 .progress-tooltip .tooltip-inner {
   background: var(--dark-grey-blue);
   max-width: 250px;
@@ -389,6 +405,35 @@
   height: 10px;
   background-color: var(--pale-grey-two);
   border-radius: 1rem;
+}
+
+.coin-logo {
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  vertical-align: text-bottom;
+  margin-right: 4px;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  font-weight: bold;
+}
+
+.coin-logo.lg {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.coin-logo.eth {
+  background-image: url(images/eth-icon.svg);
+}
+
+.coin-logo.ogn {
+  background-image: url(images/ogn-icon.svg);
+}
+
+.coin-logo.dai {
+  background-image: url(images/dai-icon.svg);
 }
 
 .reviews {
@@ -2103,7 +2148,7 @@
 }
 
 .attestation-badges .attestation-badge.telegram {
-  background-image: url('images/growth/website-icon.svg');
+  background-image: url('images/growth/telegram-badge.svg');
 }
 
 .attestation-badges .attestation-badge .badge-label.reward:before {
@@ -2819,32 +2864,6 @@
   height: 6px;
 }
 
-.telegram-login-button {
-  position: relative;
-  width: 100%;
-  max-width: 226px;
-  max-height: 40px;
-  margin-bottom: 1rem;
-}
-
-.telegram-login-button button.btn + iframe {
-  z-index: 10000;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  opacity: 0;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  filter: alpha(opacity=0);
-}
-
-.telegram-login-button button.btn {
-  max-width: 226px;
-  max-height: 40px;
-  padding: 0.375rem 2rem;
-}
-
 .attestations {
   display: flex;
 }
@@ -2929,9 +2948,9 @@
 }
 
 .attestation.telegram {
-  border-color: #6331dd;
-  background-color: rgba(99, 49, 221, 75%);
-  background-image: url(images/identity/website-icon-light.svg);
+  background-image: url(images/growth/telegram-badge.svg);
+  background-size: 100%;
+  border: 0;
 }
 
 .attestations-small .attestation {
@@ -3142,56 +3161,6 @@
 
 .availability-calendar .calendar {
   margin-bottom: 2rem;
-}
-
-.coin-price {
-  display: inline-block;
-  padding-left: 1.625rem;
-  background-size: 1.25rem;
-  background-repeat: no-repeat;
-  background-position: 0px 3px;
-  font-weight: bold;
-}
-
-.coin-price.smaller {
-  padding-left: 1.225rem;
-  background-size: 1rem;
-  background-position: 0px 2px;
-}
-
-.coin-price span {
-  margin-left: 0.25rem;
-  font-size: 14px;
-  text-transform: uppercase;
-}
-
-.coin-price.eth span {
-  color: var(--dark-purple);
-}
-
-.coin-price.eth {
-  background-image: url(images/eth-icon.svg);
-}
-
-.coin-price.ogn span {
-  color: #007bff;
-}
-
-.coin-price.ogn {
-  background-image: url(images/ogn-icon.svg);
-}
-
-.coin-price.dai span {
-  color: #007bff;
-}
-
-.coin-price.dai {
-  background-image: url(images/dai-icon.svg);
-}
-
-.coin-price.lg {
-  background-size: 1.5rem;
-  background-position: center left;
 }
 
 .enable-messaging {
@@ -4536,7 +4505,7 @@
   transition: bottom 0.3s ease;
 }
 
-.footer-wrapper.open  .footer-action-button:before {
+.footer-wrapper.open .footer-action-button:before {
   content: '';
   width: 10px;
   height: 10px;
@@ -4547,7 +4516,7 @@
   display: inline-block;
 }
 
-.footer-wrapper.open  footer {
+.footer-wrapper.open footer {
   bottom: 0;
 }
 
@@ -4937,7 +4906,7 @@
 }
 
 .attestation-modal.telegram > div h2 {
-  background-image: url(images/growth/website-icon.svg);
+  background-image: url(images/growth/telegram-badge.svg);
 }
 
 .mobile-modal-light .attestation-modal {
@@ -5008,7 +4977,7 @@
 }
 
 .mobile-modal-light .attestation-modal.telegram > div h2::before {
-  background-image: url(images/identity/website-icon-light.svg);
+  background-image: url(images/growth/telegram-badge.svg);
 }
 
 .mobile-modal-light .attestation-modal > div {
@@ -5091,6 +5060,243 @@
   padding-top: 9rem;
 }
 
+.promote-listing .budget .form-control {
+  border-width: 0 0 1px 0;
+  height: 1.5em;
+  margin-bottom: 0.5rem;
+  border-radius: 0;
+}
+
+.promote-listing .budget .input-wrap {
+  margin-top: 0.5rem;
+}
+
+.promote-listing .budget .actions {
+  margin-top: 1.5rem;
+}
+
+.promote-listing {
+  text-align: center;
+}
+
+.promote-listing .balance {
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.promote-listing h4 {
+  margin-top: 1.5rem;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.promote-listing .not-enough,
+.promote-listing .enter-amount {
+  margin: 1.5rem 0;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.5rem;
+}
+
+.promote-listing .not-enough {
+  color: #ff0000;
+}
+
+.promote-listing .amount .form-control {
+  border: 0;
+  height: 1em;
+}
+
+.promote-listing .amount .input-wrap {
+  margin-top: 1.5rem;
+}
+
+.promote-listing .amount .help,
+.promote-listing .budget .help {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.promote-listing .amount .form-control:focus,
+.promote-listing .budget .form-control:focus {
+  box-shadow: unset;
+}
+
+.promote-listing .amount .form-control,
+.promote-listing .budget .form-control {
+  font-size: 44px;
+  text-align: center;
+  color: #000;
+}
+
+.promote-listing .amount .calc,
+.promote-listing .budget .calc {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.promote-listing .amount .exposure .badge,
+.promote-listing .budget .exposure .badge {
+  margin-left: 0.375rem;
+}
+
+.promote-listing .amount .exposure,
+.promote-listing .budget .exposure {
+  font-weight: bold;
+  font-size: 14px;
+  margin: 1.5rem 0;
+  line-height: 1.5rem;
+}
+
+.promote-listing .amount .input-wrap > .ogn,
+.promote-listing .budget .input-wrap > .ogn {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  background-color: #ebf0f3;
+  border-radius: 2rem;
+  padding: 5px 8px 5px 6px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  line-height: 1em;
+  color: #007fff;
+  -ms-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.promote-listing .amount .input-wrap,
+.promote-listing .budget .input-wrap {
+  position: relative;
+}
+
+.promote-listing .input-range > input::-webkit-slider-runnable-track {
+  background: var(--track-background);
+  height: 5px;
+}
+
+.promote-listing .input-range > input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 2px solid black;
+  background: white;
+  margin-top: -6px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.promote-listing .input-range > input {
+  width: 100%;
+  -webkit-appearance: none;
+  --track-background: linear-gradient(to right, #fec100 0, #fec100 calc(var(--val) - 3px), #c0cbd4 0) no-repeat 0 45% / 100% 40%;
+  outline: 0;
+}
+
+.promote-listing .input-range {
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+}
+
+.promote-listing .how-works:before {
+  content: "";
+  width: 6rem;
+  height: 6rem;
+  background: url(images/rockets-graphic.png) no-repeat;
+  background-size: contain;
+}
+
+.promote-listing .how-works h4 {
+  margin: 0;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.promote-listing .how-works {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: space-around;
+  font-weight: 300;
+  font-size: 18px;
+  padding: 0 1rem;
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
+.promote-listing {
+  max-width: 550px;
+  display: flex;
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
+.promote-listing .success:before {
+  content: "";
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50%;
+  background: green;
+}
+
+.promote-listing .success h4 {
+  margin: 0;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.promote-listing .success .summary > div:not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+
+.promote-listing .success .summary > div > div:nth-child(1) {
+  margin-right: 1rem;
+}
+
+.promote-listing .success .summary > div {
+  display: flex;
+  justify-content: space-between;
+}
+
+.promote-listing .success .summary {
+  border-radius: 10px;
+  border: solid 1px #eaf0f3;
+  background-color: #f3f7f9;
+  padding: 1rem 1.5rem;
+}
+
+.promote-listing .success {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  min-height: calc(100vh - 8rem);
+  justify-content: space-around;
+  font-weight: 300;
+  font-size: 18px;
+  padding: 0 1rem;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
 .btn-filter {
   border: 1px solid #455d75;
   font-size: 14px;
@@ -5152,6 +5358,150 @@
   display: flex;
 }
 
+.sort-modal.modal-content {
+  min-height: auto;
+}
+
+.sort-modal.modal-header .modal-title div {
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+}
+
+.sort-modal.modal-header .modal-title .clear-button,
+.sort-modal.modal-header .modal-title .close-button {
+  font-size: 12px;
+  cursor: pointer;
+  font-weight: 300;
+  -ms-flex: auto 0 0;
+  -moz-flex: auto 0 0;
+  -webkit-flex: auto 0 0;
+  flex: auto 0 0;
+}
+
+.sort-modal.modal-header .modal-title .close-button {
+  content: '';
+  display: inline-block;
+  background-image: url('images/close-icon.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 1rem;
+  height: 2rem;
+  width: 2rem;
+}
+
+.sort-modal.modal-header .modal-title .clear-button:hover {
+  color: var(--bright-blue);
+}
+
+.sort-modal.modal-header .modal-title .clear-button {
+  text-decoration: none;
+  color: var(--bright-blue);
+}
+
+.sort-modal.modal-header .modal-title {
+  display: flex;
+}
+
+@media (max-width: 767.98px) {
+  .sort-modal {
+    padding: 1rem;
+  }
+}
+
+.dropdown {
+  width: 75px;
+}
+
+.sort-button-bar {
+  display: flex;
+  justify-content: flex-end;
+  padding: 1rem;
+  font-size: medium;
+  width: 100%;
+}
+
+.sort-button {
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+  padding: 0.75rem;
+  color: var(--dusk);
+  height: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+}
+
+.sort-button.text span:hover,
+.sort-button.text span.active {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.sort-button.text span {
+  color: var(--dusk);
+  padding: 0.25rem 0.75rem;
+  border-radius: 1rem;
+}
+
+.sort-button.text.active span {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.sort-button.text {
+  background-color: initial;
+  padding: 0 0.25rem;
+}
+
+.sort-button.icon-padding span {
+  padding-left: 2rem;
+}
+
+.sort-button span {
+  display: inline-block;
+}
+
+.sort-button:hover {
+  color: var(--dusk);
+}
+
+.sort-dropdown {
+  padding: 0;
+  position: absolute !important;
+  margin-top: 0;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  border: 1px solid var(--light);
+  font-weight: normal;
+  min-width: 12rem;
+}
+
+.sort-form {
+  padding: 0.625rem;
+}
+
+.sort-radio-label {
+  padding: 0.1rem 0rem;
+  display: flex;
+  align-items: flex-end;
+  font-size: 0.9rem;
+}
+
+.sort-radio-button {
+  margin-right: 0.5rem;
+  padding: 0;
+  height: 1.1rem;
+  width: 1.1rem;
+  vertical-align: middle;
+  margin-bottom: 1px;
+  -ms-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 .listing-search-wrapper .search-input-wrapper .search-input {
   display: flex;
 }
@@ -5181,21 +5531,10 @@
 .listing-search-wrapper .search-input-wrapper .search-dropdown.floating {
   z-index: 1000;
   position: absolute;
-  right: 0;
   left: 0;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+  border-radius: 5px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
   border: solid 1px #c2cbd3;
-  border-top: 0;
-  -ms-border-bottom-left-radius: 5px;
-  -moz-border-bottom-left-radius: 5px;
-  -webkit-border-bottom-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  -ms-border-bottom-right-radius: 5px;
-  -moz-border-bottom-right-radius: 5px;
-  -webkit-border-bottom-right-radius: 5px;
-  border-bottom-right-radius: 5px;
 }
 
 .listing-search-wrapper .search-input-wrapper .search-dropdown .title {
@@ -5208,7 +5547,6 @@
 
 .listing-search-wrapper .search-input-wrapper .search-dropdown .featured-categories-wrapper {
   margin: 0 -2rem;
-  overflow-x: scroll;
 }
 
 .listing-search-wrapper .search-input-wrapper .search-dropdown .featured-categories .category-icon.rewards:before {
@@ -5271,12 +5609,7 @@
 
 .listing-search-wrapper .search-input-wrapper .search-dropdown .featured-categories {
   display: inline-flex;
-  overflow-x: scroll;
   padding: 0 2rem;
-  -ms-flex-wrap: nowrap;
-  -moz-flex-wrap: nowrap;
-  -webkit-flex-wrap: nowrap;
-  flex-wrap: nowrap;
 }
 
 .listing-search-wrapper .search-input-wrapper .search-dropdown {
@@ -5292,14 +5625,6 @@
 .listing-search-wrapper:focus-within .form-control {
   box-shadow: none;
   outline: none;
-  -ms-border-bottom-left-radius: 0;
-  -moz-border-bottom-left-radius: 0;
-  -webkit-border-bottom-left-radius: 0;
-  border-bottom-left-radius: 0;
-  -ms-border-bottom-right-radius: 0;
-  -moz-border-bottom-right-radius: 0;
-  -webkit-border-bottom-right-radius: 0;
-  border-bottom-right-radius: 0;
 }
 
 .listing-search-wrapper:focus-within .search-input-wrapper .search-dropdown.floating:focus {
@@ -5320,6 +5645,15 @@
   padding: 1.5rem;
   background-color: white;
   z-index: 1000;
+}
+
+@media (max-width: 767.98px) {
+  .listing-search-wrapper .search-input-wrapper .search-dropdown .featured-categories {
+    -ms-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+  }
 }
 
 .navbar .listing-search-wrapper .form-control {
@@ -5356,10 +5690,6 @@
     background-size: 20px;
     border-radius: 0;
     padding-left: 0;
-  }
-
-  .listing-search-wrapper .search-input-wrapper {
-    margin-bottom: 1.5rem;
   }
 
   .listing-search-wrapper {
@@ -5559,6 +5889,27 @@
   }
 }
 
+.listings-menu-bar {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0 1rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 767.98px) {
+  .listings-menu-bar {
+    padding: 0;
+    min-height: 3.75rem;
+    border: none;
+  }
+}
+
 .listings-container {
   padding-top: 3rem;
 }
@@ -5599,10 +5950,12 @@
   }
 }
 
+.listing-card.rewards-signup-card .main-pic > div span,
 .listing-card.earn-tokens-card .main-pic > div span {
   text-transform: uppercase;
 }
 
+.listing-card.rewards-signup-card .main-pic > div:before,
 .listing-card.earn-tokens-card .main-pic > div:before {
   content: '';
   display: block;
@@ -5617,6 +5970,7 @@
   flex: 1;
 }
 
+.listing-card.rewards-signup-card .main-pic > div,
 .listing-card.earn-tokens-card .main-pic > div {
   position: absolute;
   bottom: 0;
@@ -5635,14 +5989,62 @@
   flex-direction: column;
 }
 
+.listing-card.rewards-signup-card .main-pic,
 .listing-card.earn-tokens-card .main-pic {
   text-align: center;
   position: relative;
   background-color: var(--clear-blue);
 }
 
+.listing-card.rewards-signup-card h5,
 .listing-card.earn-tokens-card h5 {
   color: #94a7b5;
+}
+
+.listing-card.earn-tokens-card .main-pic > div:before {
+  background-image: url('images/growth/buy-promo-graphic.svg');
+  background-position: bottom;
+  background-size: cover;
+}
+
+.listing-card.earn-tokens-card .main-pic > div h3 {
+  font-family: var(--heading-font);
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.listing-card.earn-tokens-card .main-pic > div {
+  padding: 0;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.listing-card.earn-tokens-card .main-pic {
+  background-color: #283f55;
+}
+
+@media (max-width: 767.98px) {
+  .listing-card.earn-tokens-card .main-pic > div:before {
+    position: absolute;
+    background-position: top;
+    background-size: contain;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: 0 10px;
+  }
+
+  .listing-card.earn-tokens-card .main-pic > div h3 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-bottom: 0.5rem;
+    padding: 0 20px;
+    font-size: 14px;
+    line-height: 1;
+  }
 }
 
 .listing-card.create-listing-card .main-pic > div:before {
@@ -10170,10 +10572,6 @@ svg.help-icon:hover path {
   margin-top: 0.75rem;
 }
 
-.listing-detail .badge {
-  margin-top: 0.75rem;
-}
-
 .listing-detail .gallery .main-pic {
   padding-top: 75%;
   background-size: contain;
@@ -10660,12 +11058,46 @@ svg.help-icon:hover path {
 
 .listing-buy .listing-buy-editonly .row {
   margin-bottom: 1rem;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .listing-buy .listing-buy-editonly {
   padding: 1rem 0 0 0;
   border-top: 1px solid #dde6ea;
+}
+
+.listing-buy .promote-listing-cta .btn {
+  margin: 1.25rem 0 0.5rem 0;
+}
+
+.listing-buy .promote-listing-cta h6 span {
+  color: #007fff;
+}
+
+.listing-buy .promote-listing-cta h6 .coin-logo {
+  margin-left: 0.5rem;
+  vertical-align: -1px;
+}
+
+.listing-buy .promote-listing-cta h6 {
+  font-size: 20px;
+  font-weight: 900;
+}
+
+.listing-buy .promote-listing-cta {
+  border: 1px solid #eaf0f3;
+  background-color: #f3f7f9;
+  text-align: center;
+  margin: 1rem 0 1rem 0;
+  padding: 1rem;
+  font-size: 18px;
+}
+
+@media (max-width: 767.98px) {
+  .listing-buy .promote-listing-cta {
+    margin: 1rem -1rem 1rem -1rem;
+    border-width: 1px 0;
+  }
 }
 
 .listing-buy .status .status-title.sold-out {
@@ -10697,7 +11129,7 @@ svg.help-icon:hover path {
 }
 
 .listing-buy .listing-action-link {
-  font-size: 16px;
+  font-size: 18px;
   margin-top: 0.75rem;
   display: inline-block;
 }
@@ -11285,6 +11717,23 @@ svg.help-icon:hover path {
   transform: translate(-50%, -50%);
 }
 
+main {
+  display: flex;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
+#app {
+  height: 100%;
+  display: flex;
+  -ms-flex-direction: column;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
 .translation-modal {
   position: fixed;
   bottom: 1rem;
@@ -11347,6 +11796,13 @@ svg.help-icon:hover path {
   to {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
+  }
+}
+
+@media (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5), (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+  .promote-listing .how-works:before {
+    background-image: url("images/rockets-graphic@2x.png");
+    background-size: contain;
   }
 }
 
