--- a/shah/app.css
+++ b/shah/app.css
@@ -2671,11 +2671,6 @@
   margin-top: auto !important;
 }
 
-.mobile-modal-light.contained.open {
-  top: 0;
-  bottom: 0;
-}
-
 .mobile-modal-light.contained .modal-content {
   overflow: auto;
   border-radius: 0;
@@ -2692,16 +2687,24 @@
 }
 
 .mobile-modal-light.contained {
-  top: 100%;
-  bottom: -100%;
-  left: 0;
-  right: 0;
   padding: 30px;
   background: transparent;
   -ms-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+.mobile-modal-light.animate-slide-up.open {
+  top: 0;
+  bottom: 0;
+}
+
+.mobile-modal-light.animate-slide-up {
+  top: 100%;
+  bottom: -100%;
+  left: 0;
+  right: 0;
   -ms-transition: top 0.3s ease, opacity 0.3s ease, bottom 0.3s ease;
   -moz-transition: top 0.3s ease, opacity 0.3s ease, bottom 0.3s ease;
   -webkit-transition: top 0.3s ease, opacity 0.3s ease, bottom 0.3s ease;
@@ -2783,6 +2786,17 @@
 
 .modal-header .modal-action-button.back-button {
   background-image: url('images/caret-grey.svg');
+  background-size: 1.5rem;
+  background-position: top center;
+  background-repeat: no-repeat;
+  -ms-transform: rotateZ(270deg);
+  -moz-transform: rotateZ(270deg);
+  -webkit-transform: rotateZ(270deg);
+  transform: rotateZ(270deg);
+}
+
+.modal-header .modal-action-button.close-button {
+  background-image: url('images/close-icon.svg');
   background-size: 1.5rem;
   background-position: top center;
   background-repeat: no-repeat;
@@ -5373,89 +5387,37 @@
   display: flex;
 }
 
-.sort-modal.modal-content {
-  min-height: auto;
+.sort-modal.modal-content .sort-form label input {
+  display: none;
 }
 
-.sort-modal.modal-header .modal-title div {
-  -ms-flex: 1;
-  -moz-flex: 1;
-  -webkit-flex: 1;
-  flex: 1;
-}
-
-.sort-modal.modal-header .modal-title .clear-button,
-.sort-modal.modal-header .modal-title .close-button {
-  font-size: 12px;
-  cursor: pointer;
-  font-weight: 300;
-  -ms-flex: auto 0 0;
-  -moz-flex: auto 0 0;
-  -webkit-flex: auto 0 0;
-  flex: auto 0 0;
-}
-
-.sort-modal.modal-header .modal-title .close-button {
+.sort-modal.modal-content .sort-form label.checked:after {
   content: '';
   display: inline-block;
-  background-image: url('images/close-icon.svg');
+  background-image: url('images/checkmark-icon.svg');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 1rem;
-  height: 2rem;
-  width: 2rem;
+  background-size: 1.75rem;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 3rem;
 }
 
-.sort-modal.modal-header .modal-title .clear-button:hover {
-  color: var(--bright-blue);
+.sort-modal.modal-content .sort-form label {
+  border: solid 1px #c2cbd3;
+  border-radius: 10px;
+  position: relative;
+  padding: 0.75rem 1rem;
 }
 
-.sort-modal.modal-header .modal-title .clear-button {
-  text-decoration: none;
-  color: var(--bright-blue);
+.sort-modal.modal-content .sort-form {
+  padding: 0;
 }
 
-.sort-modal.modal-header .modal-title {
-  display: flex;
-}
-
-@media (max-width: 767.98px) {
-  .sort-modal.modal-content .sort-form label input {
-    display: none;
-  }
-
-  .sort-modal.modal-content .sort-form label.checked:after {
-    content: '';
-    display: inline-block;
-    background-image: url('images/checkmark-icon.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 1.75rem;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    width: 3rem;
-  }
-
-  .sort-modal.modal-content .sort-form label {
-    border: solid 1px #c2cbd3;
-    border-radius: 10px;
-    position: relative;
-    padding: 0.75rem 1rem;
-  }
-
-  .sort-modal.modal-content .sort-form {
-    padding: 0;
-  }
-
-  .sort-modal.modal-content {
-    padding: 0 1rem;
-  }
-
-  .sort-modal {
-    padding: 1rem;
-  }
+.sort-modal.modal-content {
+  padding: 0 1rem;
 }
 
 .dropdown {
